--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "es2018",
+    "module": "esnext",
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
     "declaration": true,
